# text_viewer

./: TV_v0.1.cbp  TV_v0.1.depend  TV_v0.1.layout  components.h  main.c  menu.rc  scroll.c  scroll.h  text.txt  textProcessing.c  textProcessing.h  textViewer.c  txt.txt
TV_v2/: CMakeLists.txt  README.md  TV_v0.1.cbp  TV_v0.1.depend  TV_v0.1.layout  hviewer.h  main.c  menu.h  menu.rc  scroll.c  textProcessing.c  textViewer.c  textViewer.h  tviewer.h
TV_v2/texts_for_test/: short.txt  tabs.txt
readtext/: main.cpp  readtext.cbp  readtext.depend  readtext.h  readtext.layout
